--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<title>AngularJS</title>
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
 	<script src="angular/angular.min.js"></script>
+	<style>
+		.grey {
+			background: #ccc;
+		}
+	</style>
 </head>
 <body>
 
@@ -14,32 +19,6 @@
 			<!-- <h1 ng-controller="MainController">Кол-во книг: {{books.length}}</h1> -->
 
 			<div ng-controller="BooksController">
-				
-				<!-- <table class="table table-bordered table-hover">
-					<thead>
-						<tr>
-							<th>ID</th>
-							<th>Название</th>
-							<th>Год</th>
-							<th>Цена</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="book in books">
-							<td>{{$index + 1}}</td>
-							<td>{{book.title}}</td>
-							<td>{{book.year}}</td>
-							<td>{{book.price}}</td>
-						</tr>
-					</tbody>
-				</table>
-
-				<div class="input-group">
-					<input type="text" class="form-control" ng-model="name">
-					<span class="input-group-btn">
-						<button class="btn btn-default" ng-click="addBooks()">Click me</button>		
-					</span>
-				</div> -->
 
 				<wfm-dir></wfm-dir>
 
@@ -48,7 +27,8 @@
 
 		</div>
 	</main>
-
+	
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="script.js"></script>
 	<script src="services/my-factory.js"></script>
 	<script src="controllers/main-controller.js"></script>
