--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	</main>
 	
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<script src="https://code.angularjs.org/1.7.2/i18n/angular-locale_ru-ru.js"></script>
 	<script src="script.js"></script>
 	<script src="services/my-factory.js"></script>
 	<script src="controllers/main-controller.js"></script>
