--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 	<meta charset="UTF-8">
 	<title>AngularJS</title>
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-	<script src="angular/angular.min.js"></script>
 	<style>
 		.grey {
 			background: #ccc;
 		}
+		[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+			display: none;
+		}
 	</style>
 </head>
-<body>
+<body ng-cloak>
 
 	<main>
 		<div class="container">
@@ -22,6 +24,10 @@
 
 				<wfm-dir></wfm-dir>
 
+				{{data.key1}}
+				<br>
+				{{data.key2}}
+
 			</div>
 
 
@@ -29,6 +35,7 @@
 	</main>
 	
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<script src="angular/angular.min.js"></script>
 	<script src="https://code.angularjs.org/1.7.2/i18n/angular-locale_ru-ru.js"></script>
 	<script src="script.js"></script>
 	<script src="services/my-factory.js"></script>
