--- a/index.html
+++ b/index.html
@@ -18,14 +18,6 @@
 	<main>
 		<div class="container">
 
-			<!-- <h1 ng-controller="MainController">Кол-во книг: {{books.length}}</h1> -->
-
-			<!-- <div ng-controller="BooksController">
-
-				<wfm-dir></wfm-dir>
-
-			</div> -->
-
 			<div ng-view></div>
 
 		</div>
@@ -38,6 +30,7 @@
 	<script src="script.js"></script>
 	<script src="services/my-factory.js"></script>
 	<script src="controllers/books-controller.js"></script>
+	<script src="controllers/book-controller.js"></script>
 	<script src="directives/wfm-dir.js"></script>
 </body>
 </html>
