--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="MyApp">
 <head>
+	<base href="/">
 	<meta charset="UTF-8">
 	<title>AngularJS</title>
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
@@ -18,7 +19,7 @@
 	<main>
 		<div class="container">
 
-			<div ng-view></div>
+			<div ng-view></div> 
 
 		</div>
 	</main>
