--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>AngularJS</title>
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 	<style>
 		.grey {
 			background: #ccc;
@@ -19,7 +20,7 @@
 	<main>
 		<div class="container">
 
-			<div ui-view></div> 
+			<div ui-view class="slide-animation"></div> 
 
 			<a ui-sref="home" class="btn btn-default">Home</a>
 			<a ui-sref="book" class="btn btn-default">Book</a>
@@ -29,6 +30,7 @@
 	
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="angular/angular.min.js"></script>
+	<script src="angular/angular-animate.min.js"></script>
 	<script src="angular/angular-ui-router.js"></script>
 	<!-- <script src="angular/angular-route.min.js"></script> -->
 	<script src="https://code.angularjs.org/1.7.2/i18n/angular-locale_ru-ru.js"></script>
